Working on the popup, to enable loading subtitles from there

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,8 @@
     <h1>Movie Subtitles</h1>
     <h3>Subtitles out of sync?</h3>
     <div>
+      <label for="chooseFile" class="fileLabel">Select Subtitles</label>
+      <input id="chooseFile" type="file" accept=".srt"></input>
       <p>Show subtitles</p>
       <input id="calibration-offset" type="number"></input>
       <p>seconds</p>
