--- a/popup.html
+++ b/popup.html
@@ -3,25 +3,31 @@
   <head>
     <title>Video Speed Controller: Popup</title>
     <link rel="stylesheet" href="popup.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <h1>Movie Subtitles</h1>
-    <h3>On/Off</h3>
-    <div>
-    <button id="subtitle-import">Import Subtitles</button>
-    <h3>Subtitles out of sync?</h3>
-    <p>Show subtitles</p>
-      <input id="calibration-offset" type="number"></input>
-      <p>seconds</p>
-      <select id="calibration-direction">
-        <option>earlier</option>
-        <option>later</option>
-      </select>
-      <button id="calibration-confirmation">save</button>
-      <button id="calibration-reset">reset</button>
+    <h1 class="heading">Movie Subtitles</h1>
+    <img src="icons/movie-subtitles-38.png" alt="Logo" class="logo">
+    <div class="power-button-container">
+        <i style="font-size:22px" class="power-button fa">&#xf011;</i>
     </div>
-    <hr />
-    <button id="config">Shortcuts</button>
+    <div id="settings">
+      <div>
+        <button id="subtitle-import">Import Subtitles</button>
+        <h3>Subtitles out of sync?</h3>
+        <p>Show subtitles</p>
+          <input id="calibration-offset" type="number"></input>
+        <p>seconds</p>
+        <select id="calibration-direction">
+          <option>earlier</option>
+          <option>later</option>
+        </select>
+        <button id="calibration-confirmation">save</button>
+        <button id="calibration-reset">reset</button>
+      </div>
+      <hr />
+      <button id="config">Shortcuts</button>
+    </div>
     <script src="subtitleCalibration.js"></script>
     <script src="popup.js"></script>
   </body>
