--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,10 @@
   <head>
     <title>Video Speed Controller: Popup</title>
     <link rel="stylesheet" href="popup.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </head>
   <body>
     <h1 class="heading">Movie Subtitles</h1>
@@ -12,8 +15,13 @@
         <i style="font-size:22px" class="power-button fa">&#xf011;</i>
     </div>
     <div id="settings">
-      <button id="subtitle-import">Import Subtitles</button>
-      <h3>Subtitles out of sync?</h3>
+      <h3 class="menu-heading red-text text-darken-1">Subtitle Menu:</h3>
+      <div class="collection">
+        <a href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">search</i></span>Search Subtitles Online</a>
+        <a id="subtitle-import" href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">file_upload</i></span>Load Subtitles from PC</a>
+        <a href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">sync</i></span>Synchronize Subtitles</a>
+        <a id="config" href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">keyboard</i></span>Shortcut Settings</a>
+      </div>
       <p>Show subtitles</p>
         <input id="calibration-offset" type="number"></input>
       <p>seconds</p>
@@ -23,8 +31,6 @@
       </select>
       <button id="calibration-confirmation">save</button>
       <button id="calibration-reset">reset</button>
-      <hr />
-      <button id="config">Shortcuts</button>
     </div>
     <script src="subtitleCalibration.js"></script>
     <script src="popup.js"></script>
