Creating two sections in the popup menu

--- a/popup.html
+++ b/popup.html
@@ -15,12 +15,17 @@
         <i style="font-size:22px" class="power-button fa">&#xf011;</i>
     </div>
     <div id="settings">
-      <h3 class="menu-heading red-text text-darken-1">Subtitle Menu:</h3>
+      <h3 class="menu-heading red-text text-darken-3">Subtitles:</h3>
       <div class="collection">
         <a href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">search</i></span>Search Subtitles Online</a>
         <a id="subtitle-import" href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">file_upload</i></span>Load Subtitles from PC</a>
-        <a href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">sync</i></span>Synchronize Subtitles</a>
         <a id="config" href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">keyboard</i></span>Shortcut Settings</a>
+      </div>
+      <h3 class="menu-heading red-text text-darken-3" style="margin-top: 30px">Personalize:</h3>
+      <div class="collection">
+        <a href="#!" class="collection-item menu black-text"><span class="badge"></span>Subtitle Size</a>
+        <a href="#!" class="collection-item menu black-text"><span class="badge"></span>Brightness</a>
+        <a href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">sync</i></span>Synchronize Subtitles</a>
       </div>
       <p>Show subtitles</p>
         <input id="calibration-offset" type="number"></input>
