Adding plus and minus icons for brightness and text size

--- a/popup.html
+++ b/popup.html
@@ -23,8 +23,8 @@
       </div>
       <h3 class="menu-heading red-text text-darken-3" style="margin-top: 30px">Display:</h3>
       <div class="collection">
-        <a href="#!" class="collection-item menu black-text"><span class="badge"></span>Subtitle Size</a>
-        <a href="#!" class="collection-item menu black-text"><span class="badge"></span>Brightness</a>
+        <a href="#!" class="collection-item menu black-text default-cursor"><span class="badge"><i class="material-icons pointer-cursor">remove_circle</i><i class="material-icons pointer-cursor">add_circle</i></span>Subtitle Size</a>
+        <a href="#!" class="collection-item menu black-text default-cursor"><span class="badge"><i class="material-icons pointer-cursor">remove_circle</i><i class="material-icons pointer-cursor">add_circle</i></span>Brightness</a>
         <a href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">sync</i></span>Synchronize Subtitles</a>
       </div>
       <p>Show subtitles</p>
