Adding Materialize locally as a folder and implementing a tooltip

--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="popup.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
   </head>
   <body>
     <h1 class="heading">Movie Subtitles</h1>
@@ -17,7 +17,7 @@
       <h3 class="menu-heading red-text text-darken-3">General:</h3>
       <div class="collection">
         <a href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">search</i></span>Subtitle Search</a>
-        <a id="subtitle-import" href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">file_upload</i></span>Load Subtitles from PC</a>
+        <a id="subtitle-import" href="#!" class="collection-item menu black-text tooltipped" data-position="top" data-tooltip="Make sure the file format is .srt"><span class="badge"><i class="material-icons">file_upload</i></span>Load Subtitles from PC</a>
       </div>
       <h3 class="menu-heading red-text text-darken-3" style="margin-top: 30px">Display:</h3>
       <div class="collection">
@@ -26,43 +26,25 @@
       </div>
       <h3 class="menu-heading red-text text-darken-3" style="margin-top: 30px">Synchronization:</h3>
       <div class="collection">
-        <a href="#!" class="collection-item menu black-text default-cursor"><span class="badge"><input type="text" class="browser-default sync-input" placeholder="0 secs"></span>Show Subtitles Earlier</a>
-        <a href="#!" class="collection-item menu black-text default-cursor"><span class="badge"><input type="text" class="browser-default sync-input" placeholder="0 secs"></span>Show Subtitles Later</a>
+        <a href="#!" class="collection-item menu black-text default-cursor"><span class="badge"><input type="text" class="browser-default sync-input" id="sync-earlier" placeholder="0 secs"></span>Display Subtitles earlier</a>
+        <a href="#!" class="collection-item menu black-text default-cursor"><span class="badge"><input type="text" class="browser-default sync-input" id="sync-later" placeholder="0 secs"></span>Display Subtitles later</a>
         <a href="#!" class="collection-item menu black-text default-cursor">
           <div class="flex-container">
-            <button class="browser-default deep-orange accent-2 btn btn-small waves-effect waves-light">Sync Now</button>
-            <button class="browser-default grey darken-1 btn btn-small waves-effect waves-light">Reset Sync</button>
+            <button id="sync-now" class="browser-default deep-orange accent-2 btn btn-small waves-effect waves-light">Sync Now</button>
+            <button id="reset-sync" class="browser-default grey darken-1 btn btn-small waves-effect waves-light">Reset Sync</button>
           </div>
         </a>
       </div>
-      <h3 class="menu-heading red-text text-darken-3" style="margin-top: 30px">More Options:</h3>
+      <h3 class="menu-heading red-text text-darken-3" style="margin-top: 30px">More:</h3>
       <div class="collection">
-        <a id="config" href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">keyboard</i></span>Shortcut Settings</a>
+        <a href="#!" class="collection-item menu black-text" id="shortcuts"><span class="badge"><i class="material-icons">keyboard</i></span>Shortcuts</a>
         <a href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">list</i></span>Blacklist</a>
         <a href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">feedback</i></span>Feedback</a>
         <a href="#!" class="collection-item menu black-text"><span class="badge"><i class="material-icons">group</i></span>About</a>
       </div>
     </div>
   </div>
-    <div id="sync-section" class="hide">
-      <h1 class="heading">Synchronization</h1>
-      <div class="col s12">
-        <div class="input-field inline">
-          <input id="email_inline" type="email" class="validate">
-          <label for="email_inline">Email</label>
-        </div>
-      </div>
-      <p>Show subtitles</p>
-          <input id="calibration-offset" type="number"></input>
-        <p>seconds</p>
-        <select id="calibration-direction">
-          <option>earlier</option>
-          <option>later</option>
-        </select>
-        <button id="calibration-confirmation">save</button>
-        <button id="calibration-reset">reset</button>
-    </div>
-    <script src="subtitleCalibration.js"></script>
+    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
