Adding some tooltips, shifting the subtitles when leaving the popup with the mouse and updating the subtitle display directly after uploading them

--- a/popup.html
+++ b/popup.html
@@ -69,7 +69,7 @@
               ><i class="material-icons pointer-cursor" id="opacity-plus"
                 >add_circle</i
               ></span
-            >Background</a
+            >Transparency</a
           >
         </div>
         <h3
@@ -79,23 +79,31 @@
           Synchronization:
         </h3>
         <div class="collection">
-          <a href="#!" class="collection-item menu black-text default-cursor"
+          <a
+            href="#!"
+            class="collection-item menu black-text default-cursor tooltipped"
+            data-position="top"
+            data-tooltip="1 = one second, 0.5 = half a second"
             ><span class="badge"
               ><input
                 type="text"
                 class="browser-default sync-input"
                 id="sync-earlier"
-                placeholder="0 secs" /></span
-            >Display Subtitles earlier</a
+                placeholder="0" /></span
+            >Display Subtitles Earlier</a
           >
-          <a href="#!" class="collection-item menu black-text default-cursor"
+          <a
+            href="#!"
+            class="collection-item menu black-text default-cursor tooltipped"
+            data-position="top"
+            data-tooltip="1 = one second, 0.5 = half a second"
             ><span class="badge"
               ><input
                 type="text"
                 class="browser-default sync-input"
                 id="sync-later"
-                placeholder="0 secs" /></span
-            >Display Subtitles later</a
+                placeholder="0" /></span
+            >Display Subtitles Later</a
           >
           <a href="#!" class="collection-item menu black-text default-cursor">
             <div class="flex-container">
