Making the synchronization work again, now with the new design

--- a/popup.html
+++ b/popup.html
@@ -79,7 +79,7 @@
           Synchronization:
         </h3>
         <div class="collection">
-          <div class="input-field col s6">
+          <div id="sync-direction" class="input-field col s6">
             <select>
               <option value="earlier">Display Subtitles Earlier</option>
               <option value="later">Display Subtitles Later</option>
