Small fix, now sync really works

--- a/popup.html
+++ b/popup.html
@@ -79,8 +79,8 @@
           Synchronization:
         </h3>
         <div class="collection">
-          <div id="sync-direction" class="input-field col s6">
-            <select>
+          <div class="input-field col s6">
+            <select id="sync-direction">
               <option value="earlier">Display Subtitles Earlier</option>
               <option value="later">Display Subtitles Later</option>
             </select>
