Working on the error messages, making them disappear and making sure the subtitles are centered whenever the user plays or stops the video

--- a/popup.html
+++ b/popup.html
@@ -79,14 +79,14 @@
           Synchronization:
         </h3>
         <div class="collection">
-          <div class="input-field col s6">
+          <div id="earlier-later-block" class="input-field col s6">
             <select id="sync-direction">
               <option value="earlier">Display Subtitles Earlier</option>
               <option value="later">Display Subtitles Later</option>
             </select>
           </div>
           <hr />
-          <form action="#">
+          <form id="range-block" action="#">
             <p class="range-field">
               <input
                 type="range"
