Adding a success message after syncing the subtitles. It might still be buggy. I'll probably have to make it more stable

--- a/popup.html
+++ b/popup.html
@@ -108,7 +108,20 @@
             <p style="display: inline-block; font-size: 16px">sec</p>
           </form>
           <hr />
-          <p id="error-message" class="red-text hide">
+          <p
+            id="success-message"
+            class="light-green-text text-accent-4 message center-align hide"
+          >
+            Successful!
+          </p>
+          <div class="centered-container">
+            <i
+              id="sync-progress-indicator"
+              style="font-size: 22px; margin: 20px"
+              class="fa fa-refresh fa-spin grey-text hide"
+            ></i>
+          </div>
+          <p id="error-message" class="red-text message hide">
             Something went wrong. Please make sure your input is valid!
           </p>
           <a href="#!" class="collection-item menu black-text default-cursor">
